# gpsdo-controller-fw

./: .gitmodules  README.md
fpga/: .editorconfig  Makefile  debug-flash  flash-debug
fpga/src/: basics.v  config_ice40hx8k.v  config_ice40up5k.v  frequency_counter.sv  frequency_counter_tb.sv  gpsdo.v  ice40_ram_regs.v  ice40hx8k.pcf  ice40hx8k_pll.v  ice40up5k.pcf  ice40up5k_pll.v  lfsr_32.v  lfsr_32_tb.v  picosoc.v  pre_pack.py
fw/: .gitignore  Cargo.toml  build.rs  heap.x  memory.x  render-analysis.sh
fw/.cargo/: config
fw/sim/: .dockerignore  Dockerfile  docker-compose.yml
fw/sim/data/: Untitled.ipynb  counter_error_distribution.csv  simulation-analysis.ipynb  simulation-analysis.md
fw/sim/simulation-analysis/: index.md
fw/src/: ads1018.rs  allocator.rs  bus.rs  control.rs  filter.rs  freq_counter.rs  futures.rs  hal.rs  lfsr.rs  lib.rs  main.rs  max5216.rs  picorv32.rs  picosoc.rs  reactor.rs  util.rs
