[package]
name = "ks-gpsdo"
version = "0.1.0"
authors = ["Ilya Epifanov <elijah.epifanov@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
### Async
core = { package = "core-futures-tls", git = "https://github.com/sunriseos/core-futures-tls", version = "0.1.0", branch = "global" }
async-trait = "0.1.10"
nb = "0.1.2"
futures-preview = { version = "=0.3.0-alpha.17", default-features = false }
pin-utils = "0.1.0-alpha.4"
### CSP, BSP
picorv32-rt = { version = "0.5.3", features = ["interrupts"] }
picorv32 = "0.1.3"
riscv = "0.5.2"
panic-halt = "0.2.0"
bare-metal = "0.2.4"
volatile-register = "0.2.0"
### HAL
bitbang-hal = "0.2.2"
embedded-hal = { version = "0.2.3", features = ["unproven"] }
shared-bus = "0.1.4"
void = { version = "1.0.2", default-features = false }
ufmt = "0.1.0-beta.4"
lfsr = "0.2.0"
arraydeque = { version = "0.4.5", default-features = false, features = ["use_generic_array"] }
heapless = "0.5.0"
generic-array = "0.12"
typenum = "1.10.0"
libm = "0.1.4"
#enc28j60 = "0.2.1"
#ntp-parser = { version = "0.3.0", path = "../../../../oss/ntp-parser" }
linked_list_allocator = { version = "0.6.4" }
#lazy_static = { version = "1.3.0", features = ["spin_no_std"] }
bitfield = "0.13.2"
byteorder = { version = "1.3.2", default-features = false }

#[patch.crates-io]
#spin = { path = "../../../../oss/spin-rs" }

[dev-dependencies]
assert_approx_eq = "1.1.0"
itertools = "0.8.0"
rand = "0.7.0"
rand_distr = "0.2.1"
statrs = "=0.10.0"
csv = "1.1"
serde = "1.0.94"
serde_derive = "1.0.94"

[profile.release]
codegen-units = 1
debug = true
lto = true

[features]
default = ["hx8k", "const-fn"]
const-fn = ["picorv32/const-fn", "picorv32-rt/const-fn", "bare-metal/const-fn"]
hx8k = []
up5k = []
