[package]
name = "ks-gpsdo"
version = "0.1.0"
authors = ["Ilya Epifanov <elijah.epifanov@gmail.com>"]
edition = "2021"
build = "build.rs"

[dependencies]
### Async
# core = { package = "core-futures-tls", git = "https://github.com/sunriseos/core-futures-tls", version = "0.1.0", branch = "global" }
async-trait = "0.1"
nb = "0.1"
futures = { version = "0.3", default-features = false }
pin-utils = "0.1"
### CSP, BSP
picorv32-rt = { version = "0.5", features = ["interrupts"] }
picorv32 = "0.1"
riscv = "0.5"
panic-halt = "0.2"
bare-metal = "0.2"
volatile-register = "0.2"
### HAL
bitbang-hal = "0.3"
embedded-hal = { version = "0.2", features = ["unproven"] }
shared-bus = "0.1"
void = { version = "1", default-features = false }
ufmt = "0.1"
lfsr = "0.2"
arraydeque = { version = "0.4", default-features = false, features = ["use_generic_array"] }
heapless = "0.7"
generic-array = "0.12"
typenum = "1"
libm = "0.2"

#enc28j60 = "0.2.1"
#ntp-parser = { version = "0.3.0", path = "../../../../oss/ntp-parser" }
linked_list_allocator = { version = "0.10" }
#lazy_static = { version = "1.3.0", features = ["spin_no_std"] }
bitfield = "0.13"
byteorder = { version = "1", default-features = false }

[dev-dependencies]
assert_approx_eq = "1"
itertools = "0.8"
rand = "0.7"
rand_distr = "0.2"
statrs = "0.12"
csv = "1"
serde = "1"
serde_derive = "1"

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
debug = true
lto = true
panic = "abort"

[features]
default = ["hx8k", "const-fn"]
const-fn = ["picorv32/const-fn", "picorv32-rt/const-fn"]
hx8k = []
up5k = []
